--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="https://www.qq.com/404/search_children.js"
+<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js"
 charset="utf-8" homePageUrl="http://www.veltgop.xyz"
 homePageName="回到Veltgop工作室主页">
 </script>
