百度收录检测

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 	<html lang="cn">
 	<head>
-
+		<meta name="baidu-site-verification" content="code-JOTPxES9Ni" />
 		<link rel="shortcut icon" href="logo.png">
 		<meta name="author" content="colorlib">
 		<meta name="description" content="">
