--- a/index.html
+++ b/index.html
@@ -28,8 +28,21 @@
             document.open();
             document.close();
             document.title="滚开点！";
+	    alert("恭喜你发现了彩蛋！！");
             document.body.innerHTML=Source;
-        }</script>
+        }
+	function caidan(){
+	document.getElementById("caidan").class="caidanxianshi";
+	alert("恭喜你发现了彩蛋2~~~！！！");	
+	}
+		</script>
+		<style>
+			.caidanxianshi{
+			background-color : black
+				color : white
+				
+			}	
+		</style>
     
 
 	<script>
@@ -209,9 +222,9 @@
 									}
 									</style>
 								<div class="white-font">
-								<p>
+								<span>
 								   其实以上都是放屁，真实没有那么好2333（来自网站技术的吐槽）
-									</p>
+									</span>
 								</div>
 								</div>
 						</div>
@@ -346,7 +359,7 @@
 							<div class="single-feature">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-rocket"></span>
-									<h4><a href="#">3大线路</a></h4>
+									<h4><a href="#" onclick="caidan()">3大线路</a></h4>
 								</div>
 								<p>
 									1000M独享 3网直连
@@ -368,15 +381,15 @@
 							<div class="single-feature">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-bubble"></span>
-									<h4><a href="#">超大DDOS防御</a></h4>
+									<h4><a href="#" onclick="clear()">超大DDOS防御</a></h4>
 								</div>
 								<p>
 									稳定DDOS 300GB防御，保证服务器的网络稳定
 								</p>
 								<div class="white-font">
-								<p>
+								<span>
 								   其实以上都是放屁，真实没有那么好2333（来自网站技术的吐槽）
-									</p>
+									</span>
 								</div>
 							</div>							
 						</div>																					
