--- a/index.html
+++ b/index.html
@@ -51,7 +51,19 @@
         }
         document.oncontextmenu=stop;
 	</script>
-		<body onselectstart="return false">
+		<body onselectstart="return false" onload="javascript:window.alert('致所有玩家的一封信：
+亲爱的各位VeltGop服务器的玩家：
+我们很抱歉给你们发出这封信，我们的服务器由于长时间消耗资源，真正的，没了
+你们的腐竹，魔仙堡将不会继续进行开商业服活动
+群内不定期举办小游戏（一年一度）
+非常感谢你陪伴了我们走过这段时光
+从2020的疫情到2022年，将近2年的时间
+你们见证了Veltgop商业服务器的成立与兴盛时期
+可是很遗憾告诉你们一个消息：你们的魔仙堡于2021年11月20日早上8点20分突发心梗
+抢救无效死亡....
+导致此项目终止...
+腐竹的B站账号将会停止更新，工作室账号我会继续运营
+                                    ——魔仙堡的哥哥')">
 			<section class="banner-area" id="home">
 				<header class="default-header">
 					<nav class="navbar navbar-expand-lg  navbar-light">
