--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 	<html lang="cn">
 	<head>
 		<meta name="baidu-site-verification" content="code-JOTPxES9Ni" />
+		
+<style> 
+    html { 
+        -webkit-filter: grayscale(100%); 
+        -moz-filter: grayscale(100%); 
+        -ms-filter: grayscale(100%); 
+        -o-filter: grayscale(100%); 
+        filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);  
+        _filter:none; 
+    } 
+</style> 
+
+		
+		<!-- 特殊节日黑白模块 -->
 		<link rel="shortcut icon" href="logo.png">
 		<meta name="author" content="colorlib">
 		<meta name="description" content="">
