--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 								</p>
 								<p>
 								    <span id="souquan"></span><span>备案暂无<span>
-									<a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral" target="_blank"><img src="https://img.gax201.icu/blog/%E5%8F%88%E6%8B%8D%E4%BA%91_logo5.png"></a>提供CDN加速/云存储服务
+									<a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral" target="_blank"><img src="https://img.gax201.icu/blog/%E5%8F%88%E6%8B%8D%E4%BA%91_logo5.png" width="60"></a>提供CDN加速/云存储服务
 								
 								<p class="footer-text"><span id="copyright"></span></p>
             		
